fix: add proper truncation to brand name product card

--- a/assets/base.css
+++ b/assets/base.css
@@ -293,6 +293,12 @@
   .tw\:mb-20 {
     margin-bottom: calc(var(--tw-spacing) * 20) !important;
   }
+  .tw\:line-clamp-1 {
+    overflow: hidden !important;
+    display: -webkit-box !important;
+    -webkit-box-orient: vertical !important;
+    -webkit-line-clamp: 1 !important;
+  }
   .tw\:line-clamp-2 {
     overflow: hidden !important;
     display: -webkit-box !important;
